apps/staging/traefik-demo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-demo
spec:
  template:
    spec:
      containers:
      - name: traefik-demo
